prepare initial release

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -262,8 +262,19 @@ blockquote {
     }
   }
   .contact-note {
-    font-size: 0.8rem;
+    font-size: 2rem;
   }
+    a {
+      i::before {
+        color: var(--global-text-color);
+        transition-property: all 0.2s ease-in-out;
+      }
+      &:hover {
+        i::before {
+          color: var(--global-theme-color);
+        }
+      }
+    }
 }
 
 
@@ -643,3 +654,5 @@ html.transition *:after {
     }
   }
 }
+
+
