--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -28,11 +28,19 @@ layout: default
               class=profile_image_class
               alt=page.profile.image -%}
             {% endif -%}
-            {%- if page.profile.address %}
-            <div class="address">
-              {{ page.profile.address }}
+            <!-- {%- if page.profile.address %} -->
+            <!-- <div class="address"> -->
+              <!-- {{ page.profile.address }} -->
+
+            <div class="social">
+              <div class="contact-note">
+              <!-- <div class="contact-icons"> -->
+                {% include social.html %}
+              </div>
+              <!-- </div> -->
             </div>
-            {%- endif %}
+              <!-- </div> -->
+            <!-- {%- endif %} -->
           </div>
           {%- endif %}
 
