--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,7 +30,7 @@ $grey-900:            #212529;
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
-
+// 363636
 
 // Theme colors
 
