--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -482,6 +482,7 @@ footer.sticky-bottom {
     margin-top: 2rem;
     margin-bottom: -2rem;
     text-align: right;
+    color: #666;
   }
   ol.bibliography {
     list-style: none;
